# VVR-Framework

./: LICENSE  README.md
Linux/: CMakeLists.txt
Linux/VVRFramework/: CMakeLists.txt  create_env_var.bat  fetch_dll.bat
Linux/VVRFramework/GeoLib/: C2DArc.cpp  C2DArc.h  C2DBase.h  C2DBaseSet.cpp  C2DBaseSet.h  C2DCircle.cpp  C2DCircle.h  C2DHoledPolyArc.cpp  C2DHoledPolyArc.h  C2DHoledPolyArcSet.cpp  C2DHoledPolyArcSet.h  C2DHoledPolyBase.cpp  C2DHoledPolyBase.h  C2DHoledPolyBaseSet.cpp  C2DHoledPolyBaseSet.h  C2DHoledPolygon.cpp  C2DHoledPolygon.h  C2DHoledPolygonSet.cpp  C2DHoledPolygonSet.h  C2DLine.cpp  C2DLine.h  C2DLineBase.cpp  C2DLineBase.h  C2DLineBaseSet.cpp  C2DLineBaseSet.h  C2DLineBaseSetSet.cpp  C2DLineBaseSetSet.h  C2DLineSet.cpp  C2DLineSet.h  C2DPoint.cpp  C2DPoint.h  C2DPointSet.cpp  C2DPointSet.h  C2DPolyArc.cpp  C2DPolyArc.h  C2DPolyArcSet.cpp  C2DPolyArcSet.h  C2DPolyBase.cpp  C2DPolyBase.h  C2DPolyBaseSet.cpp  (+34 more)
Linux/VVRFramework/VVRScene/: CMakeLists.txt  canvas.cpp  canvas.h  dsp.cpp  dsp.h  glwidget.cpp  glwidget.h  icons.qrc  kdtree.cpp  kdtree.h  logger.cpp  logger.h  mesh.cpp  mesh.h  scene.cpp  scene.h  settings.cpp  settings.h  stdredirector.h  tiny_obj_loader.h  utils.cpp  utils.h  window.cpp  window.h  window.ui
